--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         let mouseYEnd = window.innerHeight;
         let currentY = 0;
         let fracY = 0;
-        let mouseXrange = mouseXEnd - mouseXStart;
+        let mouseXrange = mouseXEnd;
         const mouseMove = (event) => {
             currentX = event.clientX - mouseXStart;
             fracX = currentX / mouseXrange;
